--- a/be/pom.xml
+++ b/be/pom.xml
@@ -113,6 +113,7 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
@@ -216,8 +217,8 @@
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
-			<artifactId>spring-context-support</artifactId>
-			<version>4.3.11.RELEASE</version>
+			<artifactId>spring-core</artifactId>
+			<version>${springframework.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.sun.mail</groupId>
@@ -284,6 +285,5 @@
 			</plugin>
 		</plugins>
 	</build>
-
 
 </project>
