--- a/be/src/main/resources/application.properties
+++ b/be/src/main/resources/application.properties
@@ -2,6 +2,7 @@
 # = DATA SOURCE
 # ===============================
 spring.datasource.url = jdbc:mysql://localhost:3306/springsecuritydblogin
+spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.datasource.username = root
 spring.datasource.password = root
 spring.datasource.testWhileIdle = true
@@ -20,7 +21,6 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 # ==============================================================
 spring.queries.users-query=select email, password, active from user where active=1 and email=? 
 spring.queries.roles-query=select u.email, r.role from user u inner join user_role ur on(u.user_id=ur.user_id) inner join role r on(ur.role_id=r.role_id) where u.email=?
-
 
 email.smtp.host=smtp.gmail.com
 email.smtp.port=465
